--- a/Main.vm
+++ b/Main.vm
@@ -72,63 +72,7 @@ pop temp 0
 call Dialogue.mage 0
 pop temp 0
 label IF_FALSE2
-call Output.println 0
-pop temp 0
-call Output.println 0
-pop temp 0
-label WHILE_EXP0
-push local 1
-not
-if-goto WHILE_END0
-push constant 21
-call String.new 1
-push constant 69
-call String.appendChar 2
-push constant 110
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 114
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 48
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 99
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 110
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 105
-call String.appendChar 2
-push constant 110
-call String.appendChar 2
-push constant 117
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 58
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-call Keyboard.readInt 1
-pop local 1
-goto WHILE_EXP0
-label WHILE_END0
-call Dialogue.questhub 0
+call Dialogue.questHub 0
 pop temp 0
 push constant 0
 return
